# odoo-mcp-server

./: .env.example  .gitignore  README.md  config.yaml.example  install.bat  install.sh  pyproject.toml
.github/workflows/: build.yml
src/odoo_mcp/: __init__.py  __main__.py  client.py  config.py  server.py  tools.py
