[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-mcp-server"
version = "0.1.0"
description = "MCP server for Odoo ERP integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25.0",
]

[project.scripts]
odoo-mcp = "odoo_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/odoo_mcp"]
